--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <title>🔹 HBoard - Advanced Operations Excellence Dashboard v2024 🔹</title>
+    <title>🔹 HBoard - Advanced Operations Dashboard v2025 🔹</title>
     <meta name="description" content="Production-ready operations dashboard with Firebase authentication, dynamic KPI analytics, real-time team collaboration, and email screenshot functionality">
     
     <!-- External CDN Libraries -->
@@ -1893,14 +1893,14 @@
 
         // ✅ FIREBASE CONFIG - REPLACE WITH YOUR VALUES
         const firebaseConfig = {
-            apiKey: "AIzaSyBLMrRgSvRVh5R5j1yjalqQ8ycf9Z7aH3MMB2Am1XY",
-            authDomain: "hboard-af489.firebaseapp.com", 
-            projectId: "hboard-af489",
-            storageBucket: "hboard-af489.firebasestorage.app",
-            messagingSenderId: "286896691982",
-            appId: "1:286896691982:web:4df21083f8f23508745559",
-            measurementId: "G-EQ8S9T513X"
-        };
+            apiKey: "AIzaSyBUER5i1yjaLqQq8ycf9ZZaH3MMB2AmiXY",
+  authDomain: "hboard-af489.firebaseapp.com",
+  projectId: "hboard-af489",
+  storageBucket: "hboard-af489.firebasestorage.app",
+  messagingSenderId: "286896691982",
+  appId: "1:286896691982:web:4df21083f8f2350874555f",
+  measurementId: "G-EQ8S9T513X"
+};
 
         // Global variables for admin access
         window.isAdminMode = false;
@@ -3133,3 +3133,4 @@
     </script>
 </body>
 </html>
+
