--- a/index.html
+++ b/index.html
@@ -1968,12 +1968,13 @@
         // Firebase Config - REPLACE WITH YOUR ACTUAL CONFIG
         const firebaseConfig = {
             // Add your Firebase configuration here
-            apiKey: "your-api-key-here",
-            authDomain: "your-project.firebaseapp.com",
-            projectId: "your-project-id",
-            storageBucket: "your-project.appspot.com",
-            messagingSenderId: "123456789",
-            appId: "your-app-id"
+          apiKey: "AIzaSyBUER5i1yjaLqQq8ycf9ZZaH3MMB2AmiXY",
+  authDomain: "hboard-af489.firebaseapp.com",
+  projectId: "hboard-af489",
+  storageBucket: "hboard-af489.firebasestorage.app",
+  messagingSenderId: "286896691982",
+  appId: "1:286896691982:web:4df21083f8f2350874555f",
+  measurementId: "G-EQ8S9T513X"
         };
 
         // Initialize Firebase
@@ -3259,3 +3260,4 @@
     </script>
 </body>
 </html>
+
