--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <title>🔹 HBoard - Advanced Operations Excellence Dashboard v2024 🔹</title>
+    <title>🔹 HBoard - Advanced Operations Dashboard v2024 🔹</title>
     <meta name="description" content="Production-ready operations dashboard with Firebase authentication, dynamic KPI analytics, and screenshot download functionality">
     
     <!-- Firebase SDKs -->
@@ -2006,9 +2007,8 @@
         // ========================================
         
         // Firebase Config - REPLACE WITH YOUR ACTUAL CONFIG
-        const firebaseConfig = {
-            // Add your Firebase configuration here
-           apiKey: "AIzaSyBUER5i1yjaLqQq8ycf9ZZaH3MMB2AmiXY",
+       const firebaseConfig = {
+  apiKey: "AIzaSyBUER5i1yjaLqQq8ycf9ZZaH3MMB2AmiXY",
   authDomain: "hboard-af489.firebaseapp.com",
   projectId: "hboard-af489",
   storageBucket: "hboard-af489.firebasestorage.app",
@@ -2016,7 +2016,6 @@
   appId: "1:286896691982:web:4df21083f8f2350874555f",
   measurementId: "G-EQ8S9T513X"
 };
-        };
 
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
@@ -3390,4 +3389,3 @@
     </script>
 </body>
 </html>
-
