--- a/index.html
+++ b/index.html
@@ -987,15 +987,17 @@
             border-color: #28a745;
         }
 
-        .percentage-value {
-            font-size: 12px;
-            font-weight: bold;
-            color: #28a745;
-            margin-top: 5px;
+       /* NEW CSS */
+.percentage-value {
+    font-size: 16px; /* Increased from 12px */
+    font-weight: bold;
+    color: #28a745;
+    margin-top: 5px;
+}
         }
 
         .downtime-display {
-            font-size: 10px;
+            font-size: 15px;
             color: #666;
             margin-top: 3px;
         }
@@ -3897,6 +3899,7 @@ case 'kpiWithMonthly':
     </div>
 </body>
 </html>
+
 
 
 
