--- a/index.html
+++ b/index.html
@@ -855,21 +855,23 @@
             transform: scale(1.05);
         }
 
-        .status-dot {
-            width: 35px;
-            height: 35px;
-            border-radius: 50%;
-            border: 4px solid #333;
-            margin: 0 auto 10px;
-            transition: all 0.3s;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: bold;
-            font-size: 12px;
-            color: white;
+       /* NEW CSS */
+.status-dot {
+    width: 45px;              /* Increased from 35px */
+    height: 45px;             /* Increased from 35px */
+    border-radius: 50%;
+    border: 4px solid #bbbbbb;  /* Changed from black (#333) to grey */
+    margin: 0 auto 10px;
+    transition: all 0.3s;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 16px;              /* Increased from 12px */
+    color: white;
+
         }
 
         .status-dot:hover {
@@ -3899,6 +3901,7 @@ case 'kpiWithMonthly':
     </div>
 </body>
 </html>
+
 
 
 
